--- a/main.css
+++ b/main.css
@@ -17,6 +17,7 @@ html, body {
     justify-content: space-between;
     background: #4a4095;
     width: calc(16px*5); 
+    overflow-x: hidden;
 }
 
 #sidebar.collapsed {
