--- a/main.css
+++ b/main.css
@@ -18,6 +18,7 @@ html, body {
     background: #4a4095;
     width: calc(16px*5); 
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 #sidebar.collapsed {
@@ -32,6 +33,7 @@ html, body {
     display: flex;
     background: #e4e4e4;
     width: calc(100% - (16px*5));
+    justify-content: normal;
 }
 
 ._button {
