now I'm moving forward with the designing process

--- a/main.css
+++ b/main.css
@@ -30,10 +30,23 @@ html, body {
 }
 
 #content {
-    display: flex;
+    display: block;
     background: #e4e4e4;
     width: calc(100% - (16px*5));
     justify-content: normal;
+}
+
+/*// body starts here...*/
+
+@font-face {
+  font-family: "ISLAND";
+  src: url("assets/ISLAND.ttf") format("woff2");
+       /*url("/fonts/OpenSans-Regular-webfont.woff") format("woff");*/
+}
+@font-face {
+  font-family: "Gamepixies";
+  src: url("assets/Gamepixies.ttf") format("woff2");
+       /*url("/fonts/OpenSans-Regular-webfont.woff") format("woff");*/
 }
 
 ._button {
@@ -44,3 +57,60 @@ html, body {
 /*    border-width:1px; 
     border-style:solid;
 */}
+
+#toggle {
+    display: absolute;
+    position: fixed;
+    bottom: 0;
+    width: calc(13px*5); 
+    height: calc(13px*5); 
+    margin: 10px;
+    background-color: white; 
+    background-image: url('assets/circle.png');
+    float: bottom;
+}
+
+.gameboytalking{
+    display: inline-flex;
+    width: calc(32*5); 
+    height: calc(32*5); 
+    margin: 10px;
+    background-color: white;
+}
+
+#title {
+    display: block;
+    margin: 0px;
+    width: 100%;
+    text-align: center;
+    color: rgb(87, 49, 142);
+    font: 100px ISLAND;
+}
+
+.chat {
+    display: flex;
+    width: 500px;
+    height: auto;
+    padding-left: 25px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 5px;
+    color: rgb(87, 49, 142);
+    font: 27px Gamepixies;
+    background-image: url("assets/chat.png");
+    background-color: white;
+}
+
+.chat-invert {
+    display: flex;
+    width: 500px;
+    height: auto;
+    padding-left: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 25px;
+    color: rgb(87, 49, 142);
+    font: 27px Gamepixies;
+    background-image: url("assets/chat-invert.png");
+    background-color: white;
+}
